--- a/public/index.html
+++ b/public/index.html
@@ -8,17 +8,32 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Retro Markdown Live Editor - write markdown in the style of the Amiga editor Amos. "
     />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://mdle.andersbjorkland.online">
+    <meta property="og:title" content="MDLE - retro Markdown Live Editor">
+    <meta property="og:description" content="Write markdown in the style of the Amiga editor Amos.">
+    <meta property="og:image" content="%PUBLIC_URL%/mdle--og.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://mdle.andersbjorkland.online">
+    <meta property="twitter:title" content="MDLE - retro Markdown Live Editor">
+    <meta property="twitter:description" content="Write markdown in the style of the Amiga editor Amos">
+    <meta property="twitter:image" content="%PUBLIC_URL%/mdle--og.png">
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.svg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>MDLE - Markdown Live Editor</title>
+    <title>MDLE - retro Markdown Live Editor</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.8.0/marked.min.js"></script>
+    <!--script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.8.0/marked.min.js"></script-->
   </body>
 </html>
