--- a/public/index.html
+++ b/public/index.html
@@ -16,14 +16,14 @@
     <meta property="og:url" content="https://mdle.andersbjorkland.online">
     <meta property="og:title" content="MDLE - retro Markdown Live Editor">
     <meta property="og:description" content="Write markdown in the style of the Amiga editor Amos.">
-    <meta property="og:image" content="%PUBLIC_URL%/mdle--og.png">
+    <meta property="og:image" content="https://mdle.andersbjorkland.online/mdle--og.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://mdle.andersbjorkland.online">
     <meta property="twitter:title" content="MDLE - retro Markdown Live Editor">
     <meta property="twitter:description" content="Write markdown in the style of the Amiga editor Amos">
-    <meta property="twitter:image" content="%PUBLIC_URL%/mdle--og.png">
+    <meta property="twitter:image" content="https://mdle.andersbjorkland.online/mdle--og.png">
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.svg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
