--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <meta property="og:url" content="https://retro-markdown.netlify.app/">
     <meta property="og:title" content="MDLE - retro Markdown Live Editor">
     <meta property="og:description" content="Write markdown in the style of the Amiga editor Amos.">
-    <meta property="og:image" content=https://retro-markdown.netlify.app/mdle--og.png">
+    <meta property="og:image" content="https://retro-markdown.netlify.app/mdle--og.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
